[gd_scene load_steps=17 format=3 uid="uid://d2fq7rs2eobgr"]

[ext_resource type="Script" uid="uid://cc2j46xiv6mdk" path="res://scripts/ui/skills_ui.gd" id="1_5k6b1"]
[ext_resource type="Shader" uid="uid://y5kknfud6wwk" path="res://scenes/shader/blur.gdshader" id="1_knjno"]
[ext_resource type="Texture2D" uid="uid://bxa6wvr3o6nkv" path="res://assets/Skill/Panel/Pxiel-Art-UI-borders_03.png" id="2_qj5ks"]
[ext_resource type="PackedScene" uid="uid://d0iu0qxfsdmnl" path="res://scenes/ui/components/skill_panel.tscn" id="3_mi0qr"]
[ext_resource type="Script" uid="uid://fn2n3i27cfsd" path="res://scripts/ui/skill_tree.gd" id="3_qj5ks"]
[ext_resource type="Texture2D" uid="uid://bdrgkaykv3fgg" path="res://assets/Skill/Panel/divider-fade-005.png" id="5_ha2vx"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://assets/Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="6_qj5ks"]
[ext_resource type="Texture2D" uid="uid://dyl5n5580587p" path="res://assets/Skill/Panel/divider-fade-002.png" id="7_0ixyl"]
[ext_resource type="Texture2D" uid="uid://b6xtumijqc2cb" path="res://assets/Skill/Panel/Pxiel-Art-UI-borders_09.png" id="8_0ixyl"]
[ext_resource type="Script" uid="uid://ddx56vys1sda8" path="res://scripts/ui/skill_info.gd" id="8_125ae"]
[ext_resource type="Texture2D" uid="uid://bjnxricqggwas" path="res://assets/Skill/Panel/76-Shove-Stab.png" id="10_pe2b7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4kyty"]
shader = ExtResource("1_knjno")
shader_parameter/lod = 5.0
shader_parameter/mix_percentage = 0.3

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qj5ks"]
texture = ExtResource("2_qj5ks")
texture_margin_left = 19.0
texture_margin_top = 19.0
texture_margin_right = 19.0
texture_margin_bottom = 19.0
region_rect = Rect2(0, 0, 98, 100)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_125ae"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pe2b7"]
texture = ExtResource("8_0ixyl")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5k6b1"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
texture = ExtResource("8_0ixyl")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[node name="SkillsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5k6b1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4kyty")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -470.0
offset_top = -295.0
offset_right = 470.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qj5ks")

[node name="SkillTree" type="Container" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 15.0
offset_right = -286.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(316, 268)
mouse_filter = 0
script = ExtResource("3_qj5ks")

[node name="SkillPanel" parent="Panel/SkillTree" instance=ExtResource("3_mi0qr")]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 98.0
offset_top = -24.0
offset_right = 188.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_ha2vx")
expand_mode = 1

[node name="SkillCountLabel" type="Label" parent="TextureRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = -13.0
offset_right = 72.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("6_qj5ks")
text = "天赋点:1"

[node name="TextureRect3" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 683.0
offset_right = 1267.0
offset_bottom = 10.0
rotation = 1.5708
texture = ExtResource("7_0ixyl")
patch_margin_right = 2

[node name="SkillInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 691.0
offset_top = 19.0
offset_right = 924.0
offset_bottom = 564.0
script = ExtResource("8_125ae")

[node name="VBoxContainer" type="VBoxContainer" parent="SkillInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="Label" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Lv.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="SkillInfo/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("10_pe2b7")
expand_mode = 1

[node name="Name" type="Label" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "天赋名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line" type="TextureRect" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_0ixyl")
expand_mode = 1

[node name="Line2" type="TextureRect" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_0ixyl")
expand_mode = 1

[node name="Info" type="RichTextLabel" parent="SkillInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "天赋介绍:
"

[node name="Pre" type="Label" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.542467, 0.70155, 0.89004, 1)
theme_override_font_sizes/font_size = 16
text = "需要天赋：无"

[node name="Str" type="Label" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.875665, 0.584856, 0.38985, 1)
theme_override_font_sizes/font_size = 16
text = "需要天赋：无"

[node name="HBoxContainer" type="HBoxContainer" parent="SkillInfo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Upgrade" type="Button" parent="SkillInfo/VBoxContainer/HBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_125ae")
theme_override_styles/hover = SubResource("StyleBoxTexture_pe2b7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5k6b1")
theme_override_styles/normal = SubResource("StyleBoxTexture_pe2b7")
text = "学习"

[node name="key" type="Button" parent="SkillInfo/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_125ae")
theme_override_styles/hover = SubResource("StyleBoxTexture_pe2b7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pe2b7")
theme_override_styles/normal = SubResource("StyleBoxTexture_pe2b7")
text = "未设置按键"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Panel/SkillTree" to="Panel/SkillTree" method="_on_gui_input"]
[connection signal="pressed" from="SkillInfo/VBoxContainer/HBoxContainer/Upgrade" to="SkillInfo" method="_on_upgrade_pressed"]
[connection signal="pressed" from="SkillInfo/VBoxContainer/HBoxContainer/key" to="SkillInfo" method="_on_key_pressed"]
